@@ -17,26 +17,36 @@ package io.fabric8.java.generator;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.TextNode;
-import com.github.javaparser.ast.CompilationUnit;
 import com.github.javaparser.ast.body.ClassOrInterfaceDeclaration;
 import com.github.javaparser.ast.body.EnumDeclaration;
 import com.github.javaparser.ast.body.FieldDeclaration;
-import com.github.javaparser.ast.body.VariableDeclarator;
-import com.github.javaparser.ast.expr.AnnotationExpr;
-import com.github.javaparser.ast.expr.Expression;
+import com.github.javaparser.ast.expr.NormalAnnotationExpr;
 import com.github.javaparser.ast.expr.SingleMemberAnnotationExpr;
 import io.fabric8.java.generator.exceptions.JavaGeneratorException;
-import io.fabric8.java.generator.nodes.*;
+import io.fabric8.java.generator.nodes.AbstractJSONSchema2Pojo;
+import io.fabric8.java.generator.nodes.GeneratorResult.ClassResult;
+import io.fabric8.java.generator.nodes.JArray;
+import io.fabric8.java.generator.nodes.JCRObject;
+import io.fabric8.java.generator.nodes.JEnum;
+import io.fabric8.java.generator.nodes.JMap;
+import io.fabric8.java.generator.nodes.JObject;
+import io.fabric8.java.generator.nodes.JPrimitive;
+import io.fabric8.java.generator.nodes.ValidationProperties;
 import io.fabric8.kubernetes.api.model.apiextensions.v1.JSONSchemaProps;
 import io.fabric8.kubernetes.api.model.apiextensions.v1.JSONSchemaPropsOrBool;
 import io.fabric8.kubernetes.client.utils.Serialization;
+import org.assertj.core.api.OptionalAssert;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.List;
+import java.util.Map;
 
 import static io.fabric8.java.generator.CRGeneratorRunner.groupToPackage;
-import static io.fabric8.java.generator.nodes.Keywords.*;
-import static org.junit.jupiter.api.Assertions.*;
+import static io.fabric8.java.generator.nodes.Keywords.JAVA_LANG_INTEGER;
+import static io.fabric8.java.generator.nodes.Keywords.JAVA_LANG_LONG;
+import static io.fabric8.java.generator.nodes.Keywords.JAVA_LANG_STRING;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 class GeneratorTest {
 
@@ -45,23 +55,23 @@ class GeneratorTest {
   @Test
   void testCorrectInterpolationOfPackage() {
     // Act
-    String packageName = groupToPackage("test.org");
+    final var packageName = groupToPackage("test.org");
 
     // Assert
-    assertEquals("org.test", packageName);
+    assertThat(packageName).isEqualTo("org.test");
   }
 
   @Test
   void testCR() {
     // Arrange
-    JCRObject cro = new JCRObject(
+    final var cro = new JCRObject(
         "v1alpha1",
         "Type",
         "g",
         "v",
         "Namespaced",
-        Collections.emptyMap(),
-        Collections.emptyList(),
+        Map.of(),
+        List.of(),
         false,
         "",
         true,
@@ -71,26 +81,27 @@ class GeneratorTest {
         defaultConfig);
 
     // Act
-    GeneratorResult res = cro.generateJava();
+    final var res = cro.generateJava();
 
     // Assert
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("Type", res.getTopLevelClasses().get(0).getName());
-    assertEquals("v1alpha1",
-        res.getTopLevelClasses().get(0).getPackageDeclaration().get().getNameAsString());
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> {
+          assertThat(classResult.getName()).isEqualTo("Type");
+          assertPackageDeclaration(classResult, "v1alpha1");
+        });
   }
 
   @Test
   void testNamespacedCR() {
     // Arrange
-    JCRObject cro = new JCRObject(
+    final var cro = new JCRObject(
         null,
         "Type",
         "g",
         "v",
         "Namespaced",
-        Collections.emptyMap(),
-        Collections.emptyList(),
+        Map.of(),
+        List.of(),
         false,
         "",
         true,
@@ -100,24 +111,27 @@ class GeneratorTest {
         defaultConfig);
 
     // Act
-    GeneratorResult res = cro.generateJava();
+    final var res = cro.generateJava();
 
     // Assert
-    assertEquals("io.fabric8.kubernetes.api.model.Namespaced", res.getTopLevelClasses().get(0)
-        .getClassByName("Type").get().getImplementedTypes().get(0).getNameWithScope());
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "Type")
+            .hasValueSatisfying(declaration -> assertThat(declaration.getImplementedTypes()).singleElement()
+                .satisfies(
+                    type -> assertThat(type.getNameWithScope()).isEqualTo("io.fabric8.kubernetes.api.model.Namespaced"))));
   }
 
   @Test
   void testClusterScopeCR() {
     // Arrange
-    JCRObject cro = new JCRObject(
+    final var cro = new JCRObject(
         null,
         "Type",
         "g",
         "v",
         "Cluster",
-        Collections.emptyMap(),
-        Collections.emptyList(),
+        Map.of(),
+        List.of(),
         false,
         "",
         true,
@@ -127,23 +141,25 @@ class GeneratorTest {
         defaultConfig);
 
     // Act
-    GeneratorResult res = cro.generateJava();
+    final var res = cro.generateJava();
 
     // Assert
-    assertTrue(res.getTopLevelClasses().get(0).getClassByName("Type").get().getImplementedTypes().isEmpty());
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "Type")
+            .hasValueSatisfying(type -> assertThat(type.getImplementedTypes()).isEmpty()));
   }
 
   @Test
   void testCRWithoutNamespace() {
     // Arrange
-    JCRObject cro = new JCRObject(
+    final var cro = new JCRObject(
         null,
         "Type",
         "g",
         "v",
         "Namespaced",
-        Collections.emptyMap(),
-        Collections.emptyList(),
+        Map.of(),
+        List.of(),
         false,
         "",
         true,
@@ -153,17 +169,17 @@ class GeneratorTest {
         defaultConfig);
 
     // Act
-    GeneratorResult res = cro.generateJava();
+    final var res = cro.generateJava();
 
     // Assert
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("Type", res.getTopLevelClasses().get(0).getName());
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "Type"));
   }
 
   @Test
   void testPrimitive() {
     // Arrange
-    JPrimitive primitive = new JPrimitive(
+    final var primitive = new JPrimitive(
         "test",
         defaultConfig,
         null,
@@ -172,24 +188,24 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = primitive.generateJava();
+    final var res = primitive.generateJava();
 
     // Assert
-    assertEquals("test", primitive.getType());
-    assertEquals(0, res.getTopLevelClasses().size());
+    assertThat(primitive.getType()).isEqualTo("test");
+    assertThat(res.getTopLevelClasses()).isEmpty();
   }
 
   @Test
   void testPrimitiveWithNumericValidationConstraints() {
     // Arrange
-    final Double expectedMaximum = 3.14;
-    final Double expectedMinimum = 0.0;
-    ValidationProperties validationProperties = ValidationProperties.Builder
+    final var expectedMaximum = 3.14d;
+    final var expectedMinimum = 0.0d;
+    final var validationProperties = ValidationProperties.Builder
         .getInstance()
         .withMaximum(expectedMaximum)
         .withMinimum(expectedMinimum)
         .build();
-    JPrimitive primitive = new JPrimitive(
+    final var primitive = new JPrimitive(
         "test",
         defaultConfig,
         null,
@@ -198,25 +214,25 @@ class GeneratorTest {
         validationProperties);
 
     // Act
-    GeneratorResult res = primitive.generateJava();
+    final var res = primitive.generateJava();
 
     // Assert
-    assertEquals("test", primitive.getType());
-    assertEquals(0, res.getTopLevelClasses().size());
-    assertEquals(expectedMaximum, primitive.getMaximum());
-    assertEquals(expectedMinimum, primitive.getMinimum());
-    assertNull(primitive.getPattern());
+    assertThat(primitive.getType()).isEqualTo("test");
+    assertThat(res.getTopLevelClasses()).isEmpty();
+    assertThat(primitive.getMaximum()).isEqualTo(expectedMaximum);
+    assertThat(primitive.getMinimum()).isEqualTo(expectedMinimum);
+    assertThat(primitive.getPattern()).isNull();
   }
 
   @Test
   void testPrimitiveWithAlphanumericValidationConstraints() {
     // Arrange
-    final String expectedPattern = ".*whatever.*";
-    ValidationProperties validationProperties = ValidationProperties.Builder
+    final var expectedPattern = ".*whatever.*";
+    final var validationProperties = ValidationProperties.Builder
         .getInstance()
         .withPattern(expectedPattern)
         .build();
-    JPrimitive primitive = new JPrimitive(
+    final var primitive = new JPrimitive(
         "test",
         defaultConfig,
         null,
@@ -225,20 +241,20 @@ class GeneratorTest {
         validationProperties);
 
     // Act
-    GeneratorResult res = primitive.generateJava();
+    final var res = primitive.generateJava();
 
     // Assert
-    assertEquals("test", primitive.getType());
-    assertEquals(0, res.getTopLevelClasses().size());
-    assertEquals(expectedPattern, primitive.getPattern());
-    assertNull(primitive.getMaximum());
-    assertNull(primitive.getMinimum());
+    assertThat(primitive.getType()).isEqualTo("test");
+    assertThat(res.getTopLevelClasses()).isEmpty();
+    assertThat(primitive.getPattern()).isEqualTo(expectedPattern);
+    assertThat(primitive.getMaximum()).isNull();
+    assertThat(primitive.getMinimum()).isNull();
   }
 
   @Test
   void testArrayOfPrimitives() {
     // Arrange
-    JArray array = new JArray(
+    final var array = new JArray(
         new JPrimitive(
             "primitive",
             defaultConfig,
@@ -252,17 +268,17 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = array.generateJava();
+    final var res = array.generateJava();
 
     // Assert
-    assertEquals("java.util.List<primitive>", array.getType());
-    assertEquals(0, res.getTopLevelClasses().size());
+    assertThat(array.getType()).isEqualTo("java.util.List<primitive>");
+    assertThat(res.getTopLevelClasses()).isEmpty();
   }
 
   @Test
   void testMapOfPrimitives() {
     // Arrange
-    JMap map = new JMap(
+    final var map = new JMap(
         new JPrimitive(
             "primitive",
             defaultConfig,
@@ -276,17 +292,17 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = map.generateJava();
+    final var res = map.generateJava();
 
     // Assert
-    assertEquals("java.util.Map<java.lang.String, primitive>", map.getType());
-    assertEquals(0, res.getTopLevelClasses().size());
+    assertThat(map.getType()).isEqualTo("java.util.Map<java.lang.String, primitive>");
+    assertThat(res.getTopLevelClasses()).isEmpty();
   }
 
   @Test
   void testEmptyObject() {
     // Arrange
-    JObject obj = new JObject(
+    final var obj = new JObject(
         "v1alpha1",
         "t",
         null,
@@ -298,18 +314,18 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals("v1alpha1.T", obj.getType());
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("T", res.getTopLevelClasses().get(0).getName());
+    assertThat(obj.getType()).isEqualTo("v1alpha1.T");
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T"));
   }
 
   @Test
   void testEmptyObjectWithoutNamespace() {
     // Arrange
-    JObject obj = new JObject(
+    final var obj = new JObject(
         null,
         "t",
         null,
@@ -321,25 +337,23 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals("T", obj.getType());
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("T", res.getTopLevelClasses().get(0).getName());
+    assertThat(obj.getType()).isEqualTo("T");
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T"));
   }
 
   @Test
   void testObjectOfPrimitives() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps newBool = new JSONSchemaProps();
+    final var newBool = new JSONSchemaProps();
     newBool.setType("boolean");
-    props.put("o1", newBool);
-    JObject obj = new JObject(
+    final var obj = new JObject(
         "v1alpha1",
         "t",
-        props,
+        Map.of("o1", newBool),
         null,
         false,
         defaultConfig,
@@ -348,33 +362,28 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals("v1alpha1.T", obj.getType());
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("T", res.getTopLevelClasses().get(0).getName());
-
-    Optional<ClassOrInterfaceDeclaration> clz = res.getTopLevelClasses().get(0).getClassByName("T");
-    assertTrue(clz.isPresent());
-    assertEquals(1, clz.get().getFields().size());
-    assertTrue(clz.get().getFieldByName("o1").isPresent());
+    assertThat(obj.getType()).isEqualTo("v1alpha1.T");
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(declaration -> {
+              assertThat(declaration.getFields()).hasSize(1);
+              assertThat(declaration.getFieldByName("o1")).isPresent();
+            }));
   }
 
   @Test
   void testObjectWithRequiredField() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps newBool = new JSONSchemaProps();
+    final var newBool = new JSONSchemaProps();
     newBool.setType("boolean");
-    props.put("o1", newBool);
-    List<String> req = new ArrayList<>(1);
-    req.add("o1");
-    JObject obj = new JObject(
+    final var obj = new JObject(
         "v1alpha1",
         "t",
-        props,
-        req,
+        Map.of("o1", newBool),
+        List.of("o1"),
         false,
         defaultConfig,
         null,
@@ -382,207 +391,177 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    Optional<ClassOrInterfaceDeclaration> clz = res.getTopLevelClasses().get(0).getClassByName("T");
-    assertTrue(clz.get().getFieldByName("o1").get().getAnnotationByName("Required").isPresent());
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(declaration -> assertThat(declaration.getFieldByName("o1")).isPresent()
+                .hasValueSatisfying(field -> assertThat(field.getAnnotationByName("Required")).isPresent())));
   }
 
   @Test
   void testObjectWithAndWithoutGeneratedAnnotation() {
     // Arrange
-    JObject obj1 = new JObject(
+    final var obj1 = new JObject(
         "v1alpha1",
         "t",
-        new HashMap<>(),
-        new ArrayList<>(),
+        Map.of(),
+        List.of(),
         false,
         defaultConfig,
         null,
         Boolean.FALSE,
         null);
-    Config config = new Config(null, null, false, new HashMap<>());
-    JObject obj2 = new JObject(
+    final var obj2 = new JObject(
         "v1alpha1",
         "t",
-        new HashMap<>(),
-        new ArrayList<>(),
+        Map.of(),
+        List.of(),
         false,
-        config,
+        new Config(null, null, false, Map.of()),
         null,
         Boolean.FALSE,
         null);
-    String generatedAnnotationName = AbstractJSONSchema2Pojo.newGeneratedAnnotation().getNameAsString();
+    final var generatedAnnotationName = AbstractJSONSchema2Pojo.newGeneratedAnnotation().getNameAsString();
 
     // Act
-    GeneratorResult res1 = obj1.generateJava();
-    GeneratorResult res2 = obj2.generateJava();
+    final var res1 = obj1.generateJava();
+    final var res2 = obj2.generateJava();
 
     // Assert
-    Optional<ClassOrInterfaceDeclaration> clz1 = res1.getTopLevelClasses().get(0).getClassByName("T");
-    assertTrue(clz1.get().getAnnotationByName(generatedAnnotationName).isPresent());
-
-    Optional<ClassOrInterfaceDeclaration> clz2 = res2.getTopLevelClasses().get(0).getClassByName("T");
-    assertFalse(clz2.get().getAnnotationByName(generatedAnnotationName).isPresent());
+    assertThat(res1.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(
+                declaration -> assertThat(declaration.getAnnotationByName(generatedAnnotationName)).isPresent()));
+    assertThat(res2.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(
+                declaration -> assertThat(declaration.getAnnotationByName(generatedAnnotationName)).isNotPresent()));
   }
 
   @Test
   void testDefaultEnum() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps newEnum = new JSONSchemaProps();
-    newEnum.setType("string");
-    List<JsonNode> enumValues = new ArrayList<>();
-    enumValues.add(new TextNode("foo"));
-    enumValues.add(new TextNode("bar"));
-    enumValues.add(new TextNode("baz"));
-    props.put("e1", newEnum);
-    JEnum enu = new JEnum(
+    final var jEnum = new JEnum(
         "t",
         JAVA_LANG_STRING,
-        enumValues,
+        List.of(new TextNode("foo"), new TextNode("bar"), new TextNode("baz")),
         defaultConfig,
         null,
         Boolean.FALSE,
         null);
 
     // Act
-    GeneratorResult res = enu.generateJava();
+    final var res = jEnum.generateJava();
 
     // Assert
-    assertEquals("T", enu.getType());
-    assertEquals(1, res.getInnerClasses().size());
-    assertEquals("T", res.getInnerClasses().get(0).getName());
-
-    Optional<EnumDeclaration> en = res.getInnerClasses().get(0).getEnumByName("T");
-    assertTrue(en.isPresent());
-    assertEquals(3, en.get().getEntries().size());
-    assertEquals("FOO", en.get().getEntries().get(0).getName().asString());
-    assertEquals("BAR", en.get().getEntries().get(1).getName().asString());
-    assertEquals("BAZ", en.get().getEntries().get(2).getName().asString());
+    assertThat(jEnum.getType()).isEqualTo("T");
+    assertThat(res.getInnerClasses()).singleElement()
+        .satisfies(classResult -> assertEnumByName(classResult, "T")
+            .hasValueSatisfying(enumDeclaration -> assertThat(enumDeclaration.getEntries()).satisfiesExactly(
+                declaration -> assertThat(declaration.getName()).hasToString("FOO"),
+                declaration -> assertThat(declaration.getName()).hasToString("BAR"),
+                declaration -> assertThat(declaration.getName()).hasToString("BAZ"))));
   }
 
   @Test
   void testLongEnum() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps newEnum = new JSONSchemaProps();
-    newEnum.setType("integer");
-    List<JsonNode> enumValues = new ArrayList<>();
-    enumValues.add(new TextNode("1"));
-    enumValues.add(new TextNode("2"));
-    enumValues.add(new TextNode("3"));
-    props.put("e1", newEnum);
-    JEnum enu = new JEnum(
+    final var jEnum = new JEnum(
         "t",
         JAVA_LANG_LONG,
-        enumValues,
+        List.of(new TextNode("1"), new TextNode("2"), new TextNode("3")),
         defaultConfig,
         null,
         Boolean.FALSE,
         null);
 
     // Act
-    GeneratorResult res = enu.generateJava();
+    final var res = jEnum.generateJava();
 
     // Assert
-    assertEquals("T", enu.getType());
-    assertEquals(1, res.getInnerClasses().size());
-    assertEquals("T", res.getInnerClasses().get(0).getName());
-
-    Optional<EnumDeclaration> en = res.getInnerClasses().get(0).getEnumByName("T");
-    assertTrue(en.isPresent());
-    assertEquals(3, en.get().getEntries().size());
-    assertEquals("V__1", en.get().getEntries().get(0).getName().asString());
-    assertEquals("V__2", en.get().getEntries().get(1).getName().asString());
-    assertEquals("V__3", en.get().getEntries().get(2).getName().asString());
-    assertEquals("1L", en.get().getEntries().get(0).getArgument(0).toString());
-    assertEquals("2L", en.get().getEntries().get(1).getArgument(0).toString());
-    assertEquals("3L", en.get().getEntries().get(2).getArgument(0).toString());
+    assertThat(jEnum.getType()).isEqualTo("T");
+    assertThat(res.getInnerClasses()).singleElement()
+        .satisfies(classResult -> assertEnumByName(classResult, "T")
+            .hasValueSatisfying(enumDeclaration -> assertThat(enumDeclaration.getEntries()).satisfiesExactly(
+                declaration -> {
+                  assertThat(declaration.getName()).hasToString("V__1");
+                  assertThat(declaration.getArgument(0)).hasToString("1L");
+                },
+                declaration -> {
+                  assertThat(declaration.getName()).hasToString("V__2");
+                  assertThat(declaration.getArgument(0)).hasToString("2L");
+                },
+                declaration -> {
+                  assertThat(declaration.getName()).hasToString("V__3");
+                  assertThat(declaration.getArgument(0)).hasToString("3L");
+                })));
   }
 
   @Test
   void testIntEnum() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps newEnum = new JSONSchemaProps();
-    newEnum.setType("integer");
-    newEnum.setFormat("int32");
-    List<JsonNode> enumValues = new ArrayList<>();
-    enumValues.add(new TextNode("1"));
-    enumValues.add(new TextNode("2"));
-    enumValues.add(new TextNode("3"));
-    props.put("e1", newEnum);
-    JEnum enu = new JEnum(
+    final var jEnum = new JEnum(
         "t",
         JAVA_LANG_INTEGER,
-        enumValues,
+        List.of(new TextNode("1"), new TextNode("2"), new TextNode("3")),
         defaultConfig,
         null,
         Boolean.FALSE,
         null);
 
     // Act
-    GeneratorResult res = enu.generateJava();
+    final var res = jEnum.generateJava();
 
     // Assert
-    assertEquals("T", enu.getType());
-    assertEquals(1, res.getInnerClasses().size());
-    assertEquals("T", res.getInnerClasses().get(0).getName());
-
-    Optional<EnumDeclaration> en = res.getInnerClasses().get(0).getEnumByName("T");
-    assertTrue(en.isPresent());
-    assertEquals(3, en.get().getEntries().size());
-    assertEquals("V__1", en.get().getEntries().get(0).getName().asString());
-    assertEquals("V__2", en.get().getEntries().get(1).getName().asString());
-    assertEquals("V__3", en.get().getEntries().get(2).getName().asString());
-    assertEquals("1", en.get().getEntries().get(0).getArgument(0).toString());
-    assertEquals("2", en.get().getEntries().get(1).getArgument(0).toString());
-    assertEquals("3", en.get().getEntries().get(2).getArgument(0).toString());
+    assertThat(jEnum.getType()).isEqualTo("T");
+    assertThat(res.getInnerClasses()).singleElement()
+        .satisfies(classResult -> assertEnumByName(classResult, "T")
+            .hasValueSatisfying(enumDeclaration -> assertThat(enumDeclaration.getEntries()).satisfiesExactly(
+                declaration -> {
+                  assertThat(declaration.getName()).hasToString("V__1");
+                  assertThat(declaration.getArgument(0)).hasToString("1");
+                },
+                declaration -> {
+                  assertThat(declaration.getName()).hasToString("V__2");
+                  assertThat(declaration.getArgument(0)).hasToString("2");
+                },
+                declaration -> {
+                  assertThat(declaration.getName()).hasToString("V__3");
+                  assertThat(declaration.getArgument(0)).hasToString("3");
+                })));
   }
 
   @Test
   void testNotUppercaseEnum() {
     // Arrange
-    CompilationUnit cu = new CompilationUnit();
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps newEnum = new JSONSchemaProps();
-    newEnum.setType("string");
-    List<JsonNode> enumValues = new ArrayList<>();
-    enumValues.add(new TextNode("foo"));
-    enumValues.add(new TextNode("bar"));
-    enumValues.add(new TextNode("baz"));
-    props.put("e1", newEnum);
-    JEnum enu = new JEnum(
+    final var jEnum = new JEnum(
         "t",
         JAVA_LANG_STRING,
-        enumValues,
-        new Config(false, null, null, new HashMap<>()),
+        List.of(new TextNode("foo"), new TextNode("bar"), new TextNode("baz")),
+        new Config(false, null, null, Map.of()),
         null,
         Boolean.FALSE,
         null);
 
     // Act
-    GeneratorResult res = enu.generateJava();
+    final var res = jEnum.generateJava();
 
     // Assert
-    assertEquals("T", enu.getType());
-    assertEquals(1, res.getInnerClasses().size());
-    assertEquals("T", res.getInnerClasses().get(0).getName());
-
-    Optional<EnumDeclaration> en = res.getInnerClasses().get(0).getEnumByName("T");
-    assertTrue(en.isPresent());
-    assertEquals(3, en.get().getEntries().size());
-    assertEquals("foo", en.get().getEntries().get(0).getName().asString());
-    assertEquals("bar", en.get().getEntries().get(1).getName().asString());
-    assertEquals("baz", en.get().getEntries().get(2).getName().asString());
+    assertThat(jEnum.getType()).isEqualTo("T");
+    assertThat(res.getInnerClasses()).singleElement()
+        .satisfies(classResult -> assertEnumByName(classResult, "T")
+            .hasValueSatisfying(enumDeclaration -> assertThat(enumDeclaration.getEntries()).satisfiesExactly(
+                declaration -> assertThat(declaration.getName()).hasToString("foo"),
+                declaration -> assertThat(declaration.getName()).hasToString("bar"),
+                declaration -> assertThat(declaration.getName()).hasToString("baz"))));
   }
 
   @Test
   void testArrayOfObjects() {
     // Arrange
-    JArray array = new JArray(
+    final var array = new JArray(
         new JObject(
             null,
             "t",
@@ -599,18 +578,18 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = array.generateJava();
+    final var res = array.generateJava();
 
     // Assert
-    assertEquals("java.util.List<T>", array.getType());
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("T", res.getTopLevelClasses().get(0).getName());
+    assertThat(array.getType()).isEqualTo("java.util.List<T>");
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T"));
   }
 
   @Test
   void testMapOfObjects() {
     // Arrange
-    JMap map = new JMap(
+    final var map = new JMap(
         new JObject(
             null,
             "t",
@@ -627,25 +606,23 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = map.generateJava();
+    final var res = map.generateJava();
 
     // Assert
-    assertEquals("java.util.Map<java.lang.String, T>", map.getType());
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("T", res.getTopLevelClasses().get(0).getName());
+    assertThat(map.getType()).isEqualTo("java.util.Map<java.lang.String, T>");
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T"));
   }
 
   @Test
   void testObjectOfObjects() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps newObj = new JSONSchemaProps();
+    final var newObj = new JSONSchemaProps();
     newObj.setType("object");
-    props.put("o1", newObj);
-    JObject obj = new JObject(
+    final var obj = new JObject(
         null,
         "t",
-        props,
+        Map.of("o1", newObj),
         null,
         false,
         defaultConfig,
@@ -654,25 +631,19 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals(2, res.getTopLevelClasses().size());
-    assertEquals("O1", res.getTopLevelClasses().get(0).getName());
-    assertEquals("T", res.getTopLevelClasses().get(1).getName());
-
-    Optional<ClassOrInterfaceDeclaration> clzT = res.getTopLevelClasses().get(1).getClassByName("T");
-    assertTrue(clzT.isPresent());
-    assertEquals(1, clzT.get().getFields().size());
-    assertTrue(clzT.get().getFieldByName("o1").isPresent());
-    Optional<ClassOrInterfaceDeclaration> clzO1 = res.getTopLevelClasses().get(0).getClassByName("O1");
-    assertTrue(clzO1.isPresent());
+    assertThat(res.getTopLevelClasses()).satisfiesExactly(
+        classResult -> assertClassByName(classResult, "O1"),
+        classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(declaration -> assertThat(declaration.getFieldByName("o1")).isPresent()));
   }
 
   @Test
   void testObjectWithPreservedFields() {
     // Arrange
-    JObject obj = new JObject(
+    final var obj = new JObject(
         null,
         "t",
         null,
@@ -684,56 +655,46 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("T", res.getTopLevelClasses().get(0).getName());
-
-    Optional<ClassOrInterfaceDeclaration> clzT = res.getTopLevelClasses().get(0).getClassByName("T");
-    assertTrue(clzT.isPresent());
-    assertTrue(clzT.get().getFieldByName("additionalProperties").isPresent());
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(declaration -> assertThat(declaration.getFieldByName("additionalProperties")).isPresent()));
   }
 
   @Test
   void testConfigToGeneratePreservedUnknownFields() {
     // Arrange
-    Config config = new Config(null, null, null, true, new HashMap<>(), new ArrayList<>(), null, null, null);
-    JObject obj = new JObject(
+    final var obj = new JObject(
         null,
         "t",
         null,
         null,
         false,
-        config,
+        new Config(null, null, null, true, Map.of(), List.of(), null, null, null),
         null,
         Boolean.FALSE,
         null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("T", res.getTopLevelClasses().get(0).getName());
-
-    Optional<ClassOrInterfaceDeclaration> clzT = res.getTopLevelClasses().get(0).getClassByName("T");
-    assertTrue(clzT.isPresent());
-    assertTrue(clzT.get().getFieldByName("additionalProperties").isPresent());
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(declaration -> assertThat(declaration.getFieldByName("additionalProperties")).isPresent()));
   }
 
   @Test
   void testObjectWithSpecialFieldNames() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps newObj = new JSONSchemaProps();
+    final var newObj = new JSONSchemaProps();
     newObj.setType("string");
-    props.put("description", newObj);
-
-    JObject obj = new JObject(
+    final var obj = new JObject(
         null,
         "t",
-        props,
+        Map.of("description", newObj),
         null,
         false,
         defaultConfig,
@@ -742,253 +703,223 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("T", res.getTopLevelClasses().get(0).getName());
-
-    Optional<ClassOrInterfaceDeclaration> clzT = res.getTopLevelClasses().get(0).getClassByName("T");
-    assertTrue(clzT.isPresent());
-    assertTrue(clzT.get().getFieldByName("description").isPresent());
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(declaration -> assertThat(declaration.getFieldByName("description")).isPresent()));
   }
 
   @Test
   void testObjectNullableFieldsManagement() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps nullableObj = new JSONSchemaProps();
+    final var nullableObj = new JSONSchemaProps();
     nullableObj.setType("object");
     nullableObj.setNullable(Boolean.TRUE);
-    props.put("o1", nullableObj);
-
-    JSONSchemaProps nonNullableObj = new JSONSchemaProps();
+    final var nonNullableObj = new JSONSchemaProps();
     nonNullableObj.setType("object");
     nonNullableObj.setNullable(Boolean.FALSE);
-    props.put("o2", nonNullableObj);
-
-    JObject obj = new JObject(null, "t", props, null, false, defaultConfig, null, Boolean.FALSE, null);
+    final var obj = new JObject(
+        null,
+        "t",
+        Map.of("o1", nullableObj, "o2", nonNullableObj),
+        null,
+        false,
+        defaultConfig,
+        null,
+        Boolean.FALSE,
+        null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals(3, res.getTopLevelClasses().size());
-    assertEquals("O1", res.getTopLevelClasses().get(0).getName());
-    assertEquals("O2", res.getTopLevelClasses().get(1).getName());
-    assertEquals("T", res.getTopLevelClasses().get(2).getName());
-
-    Optional<ClassOrInterfaceDeclaration> clzT = res.getTopLevelClasses().get(2).getClassByName("T");
-    assertTrue(clzT.isPresent());
-    assertEquals(2, clzT.get().getFields().size());
-    Optional<FieldDeclaration> o1Field = clzT.get().getFieldByName("o1");
-    assertTrue(o1Field.isPresent());
-    FieldDeclaration actualO1Field = o1Field.get();
-    Optional<AnnotationExpr> nullableJacksonBasedAnnotation = actualO1Field
-        .getAnnotationByName("com.fasterxml.jackson.annotation.JsonSetter");
-    assertTrue(nullableJacksonBasedAnnotation.isPresent());
-    assertInstanceOf(SingleMemberAnnotationExpr.class, nullableJacksonBasedAnnotation.get());
-    SingleMemberAnnotationExpr actualNullableAnnotation = (SingleMemberAnnotationExpr) nullableJacksonBasedAnnotation.get();
-    assertEquals("nulls = com.fasterxml.jackson.annotation.Nulls.SET", actualNullableAnnotation.getMemberValue().toString());
-    Optional<AnnotationExpr> nullableFabric8BasedAnnotation = actualO1Field
-        .getAnnotationByName("io.fabric8.generator.annotation.Nullable");
-    assertTrue(nullableFabric8BasedAnnotation.isPresent());
-
-    Optional<FieldDeclaration> o2Field = clzT.get().getFieldByName("o2");
-    assertTrue(o2Field.isPresent());
-    FieldDeclaration actualO2Field = o2Field.get();
-    nullableJacksonBasedAnnotation = actualO2Field.getAnnotationByName("com.fasterxml.jackson.annotation.JsonSetter");
-    assertTrue(nullableJacksonBasedAnnotation.isPresent());
-    assertInstanceOf(SingleMemberAnnotationExpr.class, nullableJacksonBasedAnnotation.get());
-    actualNullableAnnotation = (SingleMemberAnnotationExpr) nullableJacksonBasedAnnotation.get();
-    assertEquals("nulls = com.fasterxml.jackson.annotation.Nulls.SKIP", actualNullableAnnotation.getMemberValue().toString());
-
-    Optional<ClassOrInterfaceDeclaration> clzO1 = res.getTopLevelClasses().get(0).getClassByName("O1");
-    assertTrue(clzO1.isPresent());
+    assertThat(res.getTopLevelClasses()).satisfiesExactly(
+        classResult -> assertClassByName(classResult, "O1"),
+        classResult -> assertClassByName(classResult, "O2"),
+        classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(declaration -> {
+              assertThat(declaration.getFields()).hasSize(2);
+              assertThat(declaration.getFieldByName("o1")).isPresent().hasValueSatisfying(field -> {
+                assertThat(field.getAnnotations()).hasSize(3);
+                assertAnnotationValue(field, "com.fasterxml.jackson.annotation.JsonSetter",
+                    "nulls = com.fasterxml.jackson.annotation.Nulls.SET");
+                assertAnnotationValue(field, "com.fasterxml.jackson.annotation.JsonProperty", "\"o1\"");
+                assertAnnotationValue(field, "io.fabric8.generator.annotation.Nullable", null);
+              });
+              assertThat(declaration.getFieldByName("o2")).isPresent().hasValueSatisfying(field -> {
+                assertThat(field.getAnnotations()).hasSize(2);
+                assertAnnotationValue(field, "com.fasterxml.jackson.annotation.JsonSetter",
+                    "nulls = com.fasterxml.jackson.annotation.Nulls.SKIP");
+                assertAnnotationValue(field, "com.fasterxml.jackson.annotation.JsonProperty", "\"o2\"");
+              });
+            }));
   }
 
   @Test
   void testObjectWithAdditionalPropertiesTrue() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps obj = new JSONSchemaProps();
+    final var obj = new JSONSchemaProps();
     obj.setType("object");
     obj.setAdditionalProperties(new JSONSchemaPropsOrBool(true, null));
-    props.put("o1", obj);
-
-    JObject jobj = new JObject(null, "t", props, null, false, defaultConfig, null, Boolean.FALSE, null);
+    final var jobj = new JObject(
+        null,
+        "t",
+        Map.of("o1", obj),
+        null,
+        false,
+        defaultConfig,
+        null,
+        Boolean.FALSE,
+        null);
 
     // Act
-    GeneratorResult res = jobj.generateJava();
+    final var res = jobj.generateJava();
 
     // Assert
-    assertEquals(1, res.getTopLevelClasses().size());
-    assertEquals("T", res.getTopLevelClasses().get(0).getName());
-
-    Optional<ClassOrInterfaceDeclaration> clzT = res.getTopLevelClasses().get(0).getClassByName("T");
-    assertTrue(clzT.isPresent());
-    assertEquals(1, clzT.get().getFields().size());
-    Optional<FieldDeclaration> o1Field = clzT.get().getFieldByName("o1");
-    assertTrue(o1Field.isPresent());
-    FieldDeclaration actualO1Field = o1Field.get();
-    assertEquals("io.fabric8.kubernetes.api.model.AnyType",
-        actualO1Field.getElementType().asString());
+    assertThat(res.getTopLevelClasses()).singleElement()
+        .satisfies(classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(declaration -> {
+              assertThat(declaration.getFields()).hasSize(1);
+              assertFieldElementType(declaration, "o1", "io.fabric8.kubernetes.api.model.AnyType");
+            }));
   }
 
   @Test
   void testClassNamesDisambiguationWithPackageNesting() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-    JSONSchemaProps newObj1 = new JSONSchemaProps();
-    JSONSchemaProps newObj2 = new JSONSchemaProps();
+    final var newObj1 = new JSONSchemaProps();
     newObj1.setType("object");
+    final var newObj2 = new JSONSchemaProps();
     newObj2.setType("object");
-    Map<String, JSONSchemaProps> obj2Props = new HashMap<>();
-    obj2Props.put("o1", newObj1);
-    obj2Props.put("o2", newObj1);
-    obj2Props.put("o3", newObj1);
-    newObj2.setProperties(obj2Props);
-    props.put("o1", newObj1);
-    props.put("o2", newObj2);
-    JObject obj = new JObject("v1alpha1", "t", props, null, false, defaultConfig, null, Boolean.FALSE, null);
+    newObj2.setProperties(Map.of("o1", newObj1, "o2", newObj1, "o3", newObj1));
+    final var obj = new JObject(
+        "v1alpha1",
+        "t",
+        Map.of("o1", newObj1, "o2", newObj2),
+        null,
+        false,
+        defaultConfig,
+        null,
+        Boolean.FALSE,
+        null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals(6, res.getTopLevelClasses().size());
-    // The order here is not important
-    assertEquals("O1", res.getTopLevelClasses().get(0).getName());
-    assertEquals("O1", res.getTopLevelClasses().get(1).getName());
-    assertEquals("O2", res.getTopLevelClasses().get(2).getName());
-    assertEquals("O3", res.getTopLevelClasses().get(3).getName());
-    assertEquals("O2", res.getTopLevelClasses().get(4).getName());
-    assertEquals("T", res.getTopLevelClasses().get(5).getName());
-
-    GeneratorResult.ClassResult cuT = res.getTopLevelClasses().get(5);
-    Optional<ClassOrInterfaceDeclaration> clzT = cuT.getClassByName("T");
-    assertTrue(clzT.isPresent());
-    assertEquals(2, clzT.get().getFields().size());
-    assertTrue(clzT.get().getFieldByName("o1").isPresent());
-    assertEquals("v1alpha1", cuT.getPackageDeclaration().get().getNameAsString());
-    assertEquals(
-        "v1alpha1.t.O1", clzT.get().getFieldByName("o1").get().getElementType().toString());
-    GeneratorResult.ClassResult cuO1 = res.getTopLevelClasses().get(0);
-    Optional<ClassOrInterfaceDeclaration> clzO1 = cuO1.getClassByName("O1");
-    assertTrue(clzO1.isPresent());
-    assertEquals("v1alpha1.t", cuO1.getPackageDeclaration().get().getNameAsString());
-    GeneratorResult.ClassResult cuO2 = res.getTopLevelClasses().get(4);
-    Optional<ClassOrInterfaceDeclaration> clzO2 = cuO2.getClassByName("O2");
-    assertTrue(clzO2.isPresent());
-    assertTrue(clzO2.get().getFieldByName("o1").isPresent());
-    assertEquals("v1alpha1.t", cuO2.getPackageDeclaration().get().getNameAsString());
-    assertEquals(
-        "v1alpha1.t.o2.O1",
-        clzO2.get().getFieldByName("o1").get().getElementType().toString());
-    assertTrue(clzO2.get().getFieldByName("o2").isPresent());
-    assertTrue(clzO2.get().getFieldByName("o3").isPresent());
+    assertThat(res.getTopLevelClasses()).satisfiesExactly(
+        classResult -> {
+          assertPackageDeclaration(classResult, "v1alpha1.t");
+          assertClassByName(classResult, "O1");
+        }, classResult -> {
+          assertPackageDeclaration(classResult, "v1alpha1.t.o2");
+          assertClassByName(classResult, "O1");
+        }, classResult -> {
+          assertPackageDeclaration(classResult, "v1alpha1.t.o2");
+          assertClassByName(classResult, "O2");
+        }, classResult -> {
+          assertPackageDeclaration(classResult, "v1alpha1.t.o2");
+          assertClassByName(classResult, "O3");
+        }, classResult -> {
+          assertPackageDeclaration(classResult, "v1alpha1.t");
+          assertClassByName(classResult, "O2").hasValueSatisfying(declaration -> {
+            assertThat(declaration.getFields()).hasSize(3);
+            assertFieldElementType(declaration, "o1", "v1alpha1.t.o2.O1");
+            assertFieldElementType(declaration, "o2", "v1alpha1.t.o2.O2");
+            assertFieldElementType(declaration, "o3", "v1alpha1.t.o2.O3");
+          });
+        }, classResult -> {
+          assertPackageDeclaration(classResult, "v1alpha1");
+          assertClassByName(classResult, "T")
+              .hasValueSatisfying(declaration -> {
+                assertThat(declaration.getFields()).hasSize(2);
+                assertFieldElementType(declaration, "o1", "v1alpha1.t.O1");
+                assertFieldElementType(declaration, "o2", "v1alpha1.t.O2");
+              });
+        });
   }
 
   @Test
   void testObjectDefaultFieldsManagement() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-
-    JSONSchemaProps objWithDefaultValues = new JSONSchemaProps();
+    final var jsonContent = "{\"limits\":{\"memory\":\"1024Mi\",\"cpu\":\"\"},\"requests\":{\"memory\":\"1024Mi\",\"cpu\":\"1\"}}";
+    final var defaultValue = Serialization.unmarshal(jsonContent, JsonNode.class);
+    final var objWithDefaultValues = new JSONSchemaProps();
     objWithDefaultValues.setType("object");
-    String jsonContent = "{\"limits\":{\"memory\":\"1024Mi\",\"cpu\":\"\"},\"requests\":{\"memory\":\"1024Mi\",\"cpu\":\"1\"}}";
-    JsonNode defaultValue = Serialization.unmarshal(jsonContent, JsonNode.class);
     objWithDefaultValues.setDefault(defaultValue);
-    props.put("o1", objWithDefaultValues);
-
-    JSONSchemaProps objWithoutDefaultValues = new JSONSchemaProps();
+    final var objWithoutDefaultValues = new JSONSchemaProps();
     objWithoutDefaultValues.setType("object");
-    props.put("o2", objWithoutDefaultValues);
-
-    JObject obj = new JObject(null, "t", props, null, false, defaultConfig, null, Boolean.FALSE, null);
+    final var obj = new JObject(
+        null,
+        "t",
+        Map.of("o1", objWithDefaultValues, "o2", objWithoutDefaultValues),
+        null,
+        false,
+        defaultConfig,
+        null,
+        Boolean.FALSE,
+        null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals(3, res.getTopLevelClasses().size());
-    assertEquals("O1", res.getTopLevelClasses().get(0).getName());
-    assertEquals("O2", res.getTopLevelClasses().get(1).getName());
-    assertEquals("T", res.getTopLevelClasses().get(2).getName());
-
-    Optional<ClassOrInterfaceDeclaration> clzT = res.getTopLevelClasses().get(2).getClassByName("T");
-    assertTrue(clzT.isPresent());
-    assertEquals(2, clzT.get().getFields().size());
-
-    Optional<FieldDeclaration> o1Field = clzT.get().getFieldByName("o1");
-    assertTrue(o1Field.isPresent());
-    FieldDeclaration actualO1Field = o1Field.get();
-    VariableDeclarator variableDeclarator = actualO1Field.getVariable(0);
-    assertNotNull(variableDeclarator);
-    Optional<Expression> initializer = variableDeclarator.getInitializer();
-    assertTrue(initializer.isPresent());
-
-    Optional<FieldDeclaration> o2Field = clzT.get().getFieldByName("o2");
-    assertTrue(o2Field.isPresent());
-    FieldDeclaration actualO2Field = o2Field.get();
-    variableDeclarator = actualO2Field.getVariable(0);
-    assertNotNull(variableDeclarator);
-    initializer = variableDeclarator.getInitializer();
-    assertFalse(initializer.isPresent());
-
-    Optional<ClassOrInterfaceDeclaration> clzO1 = res.getTopLevelClasses().get(0).getClassByName("O1");
-    assertTrue(clzO1.isPresent());
-
-    Optional<ClassOrInterfaceDeclaration> clzO2 = res.getTopLevelClasses().get(1).getClassByName("O2");
-    assertTrue(clzO2.isPresent());
+    assertThat(res.getTopLevelClasses()).satisfiesExactly(
+        classResult -> assertClassByName(classResult, "O1"),
+        classResult -> assertClassByName(classResult, "O2"),
+        classResult -> assertClassByName(classResult, "T")
+            .hasValueSatisfying(declaration -> {
+              assertThat(declaration.getFields()).hasSize(2);
+              assertThat(declaration.getFieldByName("o1")).isPresent()
+                  .hasValueSatisfying(field -> assertThat(field.getVariables()).singleElement()
+                      .satisfies(declarator -> assertThat(declarator.getInitializer()).isPresent()));
+              assertThat(declaration.getFieldByName("o2")).isPresent()
+                  .hasValueSatisfying(field -> assertThat(field.getVariables()).singleElement()
+                      .satisfies(declarator -> assertThat(declarator.getInitializer()).isNotPresent()));
+            }));
   }
 
   @Test
   void testExactlyMoreThanOneDuplicatedFieldFailsWithException() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-
-    JSONSchemaProps duplicatedFieldObject = new JSONSchemaProps();
+    final var duplicatedFieldObject = new JSONSchemaProps();
     duplicatedFieldObject.setType("boolean");
     duplicatedFieldObject.setDescription("This field is JUST FOR testing purposes.");
-    props.put("test_Dup", duplicatedFieldObject);
     duplicatedFieldObject.setDescription("Deprecated: This field is JUST FOR testing purposes.");
-    props.put("test Dup", duplicatedFieldObject);
-    props.put("test.Dup", duplicatedFieldObject);
+    final var props = Map.of("test_Dup", duplicatedFieldObject, "test Dup", duplicatedFieldObject, "test.Dup",
+        duplicatedFieldObject);
 
     // Assert
-    assertThrows(JavaGeneratorException.class, () -> {
-      // Act
-      JObject obj = new JObject(null, "t", props, null, false, defaultConfig, null, Boolean.FALSE, null);
-    },
-        "An exception is expected to be thrown when an object contains more that one duplicated field");
+    assertThatThrownBy(
+        // Act
+        () -> new JObject(null, "t", props, null, false, defaultConfig, null, Boolean.FALSE, null))
+        .as("An exception is expected to be thrown when an object contains more that one duplicated field")
+        .isInstanceOf(JavaGeneratorException.class);
   }
 
   @Test
   void testExactlyDuplicatedFieldNotMarkedAsDeprecatedFailsWithException() {
     // Arrange
-    Map<String, JSONSchemaProps> props = new HashMap<>();
-
-    JSONSchemaProps duplicatedFieldObject = new JSONSchemaProps();
+    final var duplicatedFieldObject = new JSONSchemaProps();
     duplicatedFieldObject.setType("boolean");
     duplicatedFieldObject.setDescription("This field is JUST FOR testing purposes.");
-    props.put("testDup", duplicatedFieldObject);
-    props.put("test-Dup", duplicatedFieldObject);
+    final var props = Map.of("testDup", duplicatedFieldObject, "test-Dup", duplicatedFieldObject);
 
     // Assert
-    assertThrows(JavaGeneratorException.class, () -> {
-      // Act
-      JObject obj = new JObject(null, "t", props, null, false, defaultConfig, null, Boolean.FALSE, null);
-    },
-        "An exception is expected to be thrown when an object contains one duplicated field that is not marked as deprecated");
+    assertThatThrownBy(
+        // Act
+        () -> new JObject(null, "t", props, null, false, defaultConfig, null, Boolean.FALSE, null))
+        .as("An exception is expected to be thrown when an object contains one duplicated field that is not marked as deprecated")
+        .isInstanceOf(JavaGeneratorException.class);
   }
 
   @Test
   void testExistingJavaTypeObject() {
     // Arrange
-    Config config = Config.builder()
-        .existingJavaTypes(Collections.singletonMap("v1alpha1.T", "org.test.ExistingJavaType")).build();
-    JObject obj = new JObject(
+    final var config = Config.builder().existingJavaTypes(Map.of("v1alpha1.T", "org.test.ExistingJavaType")).build();
+    final var obj = new JObject(
         "v1alpha1",
         "T",
         null,
@@ -1000,10 +931,48 @@ class GeneratorTest {
         null);
 
     // Act
-    GeneratorResult res = obj.generateJava();
+    final var res = obj.generateJava();
 
     // Assert
-    assertEquals("org.test.ExistingJavaType", obj.getType());
-    assertEquals(0, res.getTopLevelClasses().size());
+    assertThat(obj.getType()).isEqualTo("org.test.ExistingJavaType");
+    assertThat(res.getTopLevelClasses()).isEmpty();
+  }
+
+  private static OptionalAssert<ClassOrInterfaceDeclaration> assertClassByName(ClassResult classResult,
+      String expectedClassName) {
+    assertThat(classResult.getName()).isEqualTo(expectedClassName);
+    return assertThat(classResult.getClassByName(expectedClassName)).isPresent();
+  }
+
+  @SuppressWarnings("SameParameterValue")
+  private static OptionalAssert<EnumDeclaration> assertEnumByName(ClassResult classResult,
+      String expectedClassName) {
+    assertThat(classResult.getName()).isEqualTo(expectedClassName);
+    return assertThat(classResult.getEnumByName(expectedClassName)).isPresent();
+  }
+
+  private static void assertAnnotationValue(FieldDeclaration field, String annotationName, String expectedMemberValue) {
+    assertThat(field.getAnnotationByName(annotationName)).isPresent()
+        .hasValueSatisfying(annotationExpr -> {
+          if (expectedMemberValue != null) {
+            assertThat(annotationExpr).isInstanceOf(SingleMemberAnnotationExpr.class);
+            final var annotation = (SingleMemberAnnotationExpr) annotationExpr;
+            assertThat(annotation.getMemberValue()).hasToString(expectedMemberValue);
+          } else {
+            assertThat(annotationExpr).isInstanceOf(NormalAnnotationExpr.class);
+          }
+        });
+  }
+
+  private static void assertFieldElementType(ClassOrInterfaceDeclaration declaration, String fieldName,
+      String expectedElementType) {
+    assertThat(declaration.getFieldByName(fieldName)).isPresent()
+        .hasValueSatisfying(field -> assertThat(field.getElementType().asString())
+            .isEqualTo(expectedElementType));
+  }
+
+  private static void assertPackageDeclaration(ClassResult classResult, String expectedPackageName) {
+    assertThat(classResult.getPackageDeclaration()).isPresent()
+        .hasValueSatisfying(declaration -> assertThat(declaration.getNameAsString()).isEqualTo(expectedPackageName));
   }
 }
